--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -107,6 +107,7 @@
     <string name="toast_backup_nothing">Нет заметок.</string>
     <string name="toast_cancelled">Отменено.</string>
     <string name="toast_email_required">Не заполнен адрес электронной почты.</string>
+    <string name="toast_no_file_manager_app">Установите файловый менеджер.</string>
     <string name="toast_note_drafted">Заметка перемещена в черновики.</string>
     <string name="toast_note_undrafted">Заметка перемещена в ленту.</string>
     <string name="toast_password_required">Не заполнен пароль.</string>
