--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -126,6 +126,7 @@
     <string name="toast_backup_nothing">Nothing to backup.</string>
     <string name="toast_cancelled">Cancelled.</string>
     <string name="toast_email_required">Email is required.</string>
+    <string name="toast_no_file_manager_app">Install a file manager application.</string>
     <string name="toast_note_drafted">Marked as a draft.</string>
     <string name="toast_note_undrafted">Marked as not a draft.</string>
     <string name="toast_password_required">Password is required.</string>
