--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="account_basic">Basic Account</string>
     <string name="account_offline">Offline Account</string>
     <string name="activity_about">About</string>
-    <string name="activity_authenticator">@string/app_name</string>
+    <string name="activity_authenticator" translatable="false">@string/app_name</string>
     <string name="activity_feedback">Feedback</string>
     <string name="activity_note">Note</string>
     <string name="activity_pin">Passcode Required</string>
